# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.382 2007-04-16 12:56:36 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.2.0 beta2 (2007/04/16)
 - (2007/04/16) Fixed bug# 1448 - Apache::Registry in README.webserver wrong,
     mod_perl2 is missing.
 - (2007/04/16) Fixed bug# 1286 - apache configuration should use
    <IfModule mod_perl.c>.
 - (2007/04/16) Fixed bug# 1755 - Wrong permissions for some files.
 - (2007/04/16) Fixed bug# 1757 - Cannot install postgres db - null value in
    column "escalation_start_time" violates not-null constraint.
 - (2007/04/16) Fixed bug# 1745 - Invalid SQL-statements in AgentTicketQueue
    view.
 - (2007/04/13) Fixed bug# 1741 - "PostmasterFollowUpStateClosed" buggy on
    follow up actions.
 - (2007/04/12) Updated bulgarian translation, thanks to Alex Kantchev!
 - (2007/04/12) Fixed bug# 1748 - Session not allowed to be larger than 358400
    Bytes using IPC. Change max session size from 350k to 2 MB.
 - (2007/04/12) Fixed bug# 1744 - Unable to create xml_storage table in utf8
    charset on mysql database.
 - (2007/04/12) Fixed bug# 1739 - Unable to insert new SLA via admin-web after
    upgrade to 2.2.0 beta1.
 - (2007/04/11) Added new Arabic (Saudi Arabia) translation, thanks to
    Mohammad Saleh!

2.2.0 beta1 (2007/04/02)
 - (2007/04/02) Added customer company feature (split of contact and company
    infos). Need to be activated in CustomerUser config (see
    Kernel/Config/Defaults.pm).
 - (2007/03/27) Added enhancement #1688 - Backreference in postmaster filter
    replaces everything, not just the matched backreferenced token.
 - (2007/03/27) Added enhancement #1600 - Adjustable encoding for mails.
 - (2007/03/21) Updated cpan module CGI to version 3.27.